--- a/2022.11.14_Irkutsk_field_methods.Rmd
+++ b/2022.11.14_Irkutsk_field_methods.Rmd
@@ -143,7 +143,7 @@ read_csv("data/conlab_corpora_lozhit.csv") %>%
   geom_text(aes(label = nn), nudge_x = 0.5)+
   labs(x = "количество носителей, употребляющих ложить", 
        y = "", 
-       caption = "на основе устных корпусов\nмеждунароной лаборатории языковой конвергенции")
+       caption = "на основе устных корпусов\nМеждунароной лаборатории языковой конвергенции")
 ```
 
 ## Как это влияет на инструменты компьютерной лингвистики для малых языков?
@@ -159,15 +159,235 @@ read_csv("data/conlab_corpora_lozhit.csv") %>%
 ## Инструменты для полевых лингвистов
 
 - устные корпуса
-    - без морфологической разметки
-    - с морфологической разметкой
+  - без морфологической разметки
+  - с морфологической разметкой
 - морфологические анализаторы (трансдьюссеры lexd и twol)
 - синтаксические парсеры (проект Universal Dependencies)
 
 # Устные корпуса
 
+## SpoCo [@vonWaldenfels16]
+
+- устьянские говоры (959 782 сл.-у.);
+- хиславичский говор (260 793 сл.-у.);
+- говоры низовья рек Лух и Теза (146 350 сл.-у.);
+- говор с. Малинино (138 943 сл.-у.);
+- говор с. Роговатка (100 047 сл.-у.);
+- говор д. Нехочи (88 965 сл.-у.);
+- говор Средней Пёзы (79 566 сл.-у.);
+- говор верхней Пинеги и Выи (70 803 сл.-у.);
+- говор с. Спиридонова Буда (70 565 сл.-у.);
+- опочецкие говоры (68 741 словоупотребление);
+- лужниковский говор (68 666 сл.-у.);
+- говор г. Звенигород (68 324 сл.-у.);
+- говор д. Шетнево и Макеево (58 003 сл.-у.);
+- говор с. Кеба (54 535 сл.-у.);
+- говор с. Церковное (19 960 сл.-у.).
+
+## SpoCo [@vonWaldenfels16]
+
+- дагестанский русский (227 885 сл.-у.);
+- бесермянский русский (97 216 сл.-у.);
+- башкирский русский (93 127 сл.-у.);
+- карельский русский (74 014 сл.-у.);
+- чувашский русский (46 307 сл.-у.);
+- цыганский русский (41 767 сл.-у.);
+- якутский русский (15 139 сл.-у.).
+
+## SpoCo [@vonWaldenfels16]
+
+```{r}
+knitr::include_graphics("images/01_malinino.png", dpi = 350)
+```
+
+## SpoCo [@vonWaldenfels16]
+
+```{r}
+knitr::include_graphics("images/02_Malinino.png", dpi = 300)
+```
+
+## Tsakorpus [@arkhangelskiy19]
+
+- Абазинский
+- Адыгейский
+- Башкирский
+- Кабардинский
+- Хакасский
+- Луговой Марийский
+
+## Tsakorpus [@arkhangelskiy19]
+
+```{r}
+knitr::include_graphics("images/03_bashkir.png", dpi = 520)
+```
+
+## Все наши корпуса доступны здесь
+
+<http://lingconlab.ru/>
+
 # Морфологический анализаторы
 
-# Синтаксические парсеры
+## Что такое трансдьюсер?
+
+Трансдьюсер (конечный автомат с выходом) --- это вид конечного автомата с двумя лентами памяти.
+
+- Вот пример конечного автомата с одной лентой памяти. Он проверяте является поданное на вход слово словом *лама*:
+
+```{r}
+library(DiagrammeR)
+grViz('
+  digraph G { rankdir="LR"
+  node [fontname="Brill",shape=circle,fontsize=14,fixedsize=true]
+  edge [fontname="Brill",fontsize=16]
+  0 [label="0"];
+  1 [label="1"];
+  2 [label="2"];
+  3 [label="3"];
+  4 [label="4: ✔️",shape=doublecircle];
+  5 [label="5: ✘",shape=doublecircle];
+  0 -> 1 [label="л"];
+  0 -> 5 [label="не л"];
+  1 -> 2 [label="а"];
+  1 -> 5 [label="не а"];
+  2 -> 3 [label="м"];
+  2 -> 5 [label="не м"];
+  3 -> 4 [label="а"];
+  3 -> 5 [label="не а"];
+}')
+```
+
+## Что такое трансдьюсер?
+
+Трансдьюсер (конечный автомат с выходом) --- это вид конечного автомата с двумя лентами памяти.
+
+- Вот пример конечного автомата с одной лентой памяти. Он проверяте является поданное на вход слово словом *лама*.
+- Обычно эти ветви "не X" не пишут:
+
+```{r}
+grViz('
+  digraph G { rankdir="LR"
+  node [fontname="Brill",shape=circle,fontsize=14,fixedsize=true]
+  edge [fontname="Brill",fontsize=16]
+  0 [label="0"];
+  1 [label="1"];
+  2 [label="2"];
+  3 [label="3"];
+  4 [label="4",shape=doublecircle];
+  0 -> 1 [label="л"];
+  1 -> 2 [label="а"];
+  2 -> 3 [label="м"];
+  3 -> 4 [label="а"];
+}')
+```
+
+## Что такое трансдьюсер?
+
+Трансдьюсер (конечный автомат с выходом) --- это вид конечного автомата с двумя лентами памяти.
+
+- Вот пример конечного автомата с одной лентой памяти. Он проверяте является поданное на вход слово словом *лама*.
+- Обычно эти ветви "не X" не пишут.
+- Можно закодировать больше слов (*лама*, *ламу*, *лам*):
+
+```{r}
+grViz('
+  digraph G { rankdir="LR"
+  node [fontname="Brill",shape=circle,fontsize=14,fixedsize=true]
+  edge [fontname="Brill",fontsize=16]
+  0 [label="0"];
+  1 [label="1"];
+  2 [label="2"];
+  3 [label="3",shape=doublecircle];
+  4 [label="4",shape=doublecircle];
+  5 [label="5",shape=doublecircle];
+  0 -> 1 [label="л"];
+  1 -> 2 [label="а"];
+  2 -> 3 [label="м"];
+  3 -> 4 [label="а"];
+  3 -> 5 [label="у"];
+}')
+```
+
+
+## Что такое трансдьюсер?
+
+У трансдьюсеров две ленты памяти, что можно воспринимать как переписывание:
+
+- `лама` переходит в `лама<n><nom><sg>`
+- `ламу` переходит в `лама<n><acc><sg>`
+- `лам` переходит в `лама<n><acc><pl>`
+
+
+- все остальное -- ошибка
+
+```{r}
+grViz('
+  digraph G { rankdir="LR"
+  node [fontname="Brill",shape=circle,fontsize=14,fixedsize=true]
+  edge [fontname="Brill",fontsize=16]
+  0 [label="0"];
+  1 [label="1"];
+  2 [label="2"];
+  3 [label="3"];
+  4 [label="4",shape=doublecircle];
+  5 [label="5",shape=doublecircle];
+  6 [label="6",shape=doublecircle];
+  0 -> 1 [label="л:л"];
+  1 -> 2 [label="а:а"];
+  2 -> 3 [label="м:м"];
+  2 -> 6 [label="м:ма<n><acc><pl>"];
+  3 -> 4 [label="а:а<тom><sg>"];
+  3 -> 5 [label="у:а<acc><sg>"];
+}')
+```
+
+## Зачем использовать трансдьюсер?
+
+- они обратимы, так что анализ (`ламу` → `лама<acc><sg>`)и генерация (`лама<acc><sg>` → `ламу`) могут быть сделаны одним и тем же трансдьюсером \pause
+- их можно оптимизировать для быстрого поиска  \pause
+- их можно соединять с другими трансдьюсерами (например, транслитерация или даже перевод)  \pause
+- формализм трансдьюсеров позволяет описывать языковой материал в приближенном к лингвистическому описанию виде
+
+## Как использовать трансдьюсер?
+
+- можно почитать [@beesley03; @karttunen92]
+- `lexd` --- компилятор для морфологии [@swanson21]
+- `twol` --- компилятор для морфонологии
+
+## `lexd` пример (зиловский андийский)
+
+```
+PATTERNS
+Numerals NumearalMarker
+
+LEXICON Numerals
+иᵸшду                 # пять; five
+ойлIи                 # шесть; six
+гьокьу                # семь; seven
+бейкьи                # восемь; eight
+гьочIо                # девять; nine
+
+LEXICON NumearalMarker
+<num>:гу
+```
+\pause
+```
+иᵸшдугу:иᵸшду<num>
+ойлIигу:ойлIи<num>
+гьокьугу:гьокьу<num>
+бейкьигу:бейкьи<num>
+гьочIогу:гьочIо<num>
+```
+
+## Как разработать морфологический трансдьюсер?
+
+- опишите морфологию и морфонологию используя доступные ресурсы \pause
+- составьте словарь с словоизменительной аннотацией \pause
+- опционально можно сделать список тестовых форм, которые трансдьюсер должен разбирать \pause
+- `чIе<NUM><num><obl.m><epent.m><an.sg><aff> чIегушубо` (Zilo Andi)
+- проверьте ваш трансдьюсер на аннотированном (или даже неаннотированном) корпусе
+
+## Спасибо за внимание!
+
+agricolamz@gmail.com
 
 # References {.allowframebreaks}
