--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,21 @@
+@incollection{arkhangelskiy19,
+  title = {Corpora of social media in minority {U}ralic languages},
+  author = {Arkhangelskiy, T.},
+  booktitle = {Proceedings of the fifth {W}orkshop on {C}omputational {L}inguistics for {U}ralic {L}anguages},
+  address = {Tartu, Estonia},
+  year = {2019},
+  publisher={Association for Computational Linguistics}
+}
+
+@article{vonWaldenfels16,
+  title={SpoCo-a simple and adaptable web interface for dialect corpora},
+  author={von Waldenfels, Ruprecht and Wo{\'z}niak, Micha{\l}},
+  journal={Journal for language technology and computational linguistics},
+  volume={31},
+  pages={155--170},
+  year={2016}
+}
+
 @article{lewis10,
   title={Assessing endangerment: expanding Fishman’s GIDS},
   author={Lewis, M. P. and Simons, G. F.},
